# LocalFiction

.github/workflows/: clang-tidy-review.yml
benchmarks/TOY/: 1bitAdderMaj.v  mux21_and.v
cli/: commands.hpp
cli/cmd/physical_design/: ortho.hpp
cmake/: StaticAnalyzers.cmake
experiments/: CMakeLists.txt  fiction_experiments.hpp  ortho_new_experiments.cpp  tablemaker.py
include/: CMakeLists.txt
include/fiction/algorithms/network_transformation/: fanout_inverter_balancing.hpp  fanout_substitution.hpp  fo_inv_balancing.hpp  network_conversion.hpp
include/fiction/algorithms/physical_design/: ortho_majority_gates_network.hpp  ortho_new.hpp  ortho_new_without_input_network.hpp  ortho_ordering_network.hpp  ortho_sequential.hpp  ortho_sequential_network.hpp  orthogonal.hpp
include/fiction/algorithms/verification/: design_rule_violations.hpp
include/fiction/io/: dot_drawers.hpp
include/fiction/layouts/: clocked_layout.hpp  gate_level_layout.hpp
include/fiction/networks/: sequential_technology_network.h  sequential_technology_network.hpp  technology_network.hpp
include/fiction/networks/views/: input_sort_view.hpp  reverse_view.hpp  topo_view_input_sort.hpp
include/fiction/technology/: qca_one_library.hpp
include/fiction/utils/: placement_utils.hpp
test/: CMakeLists.txt
test/algorithms/network_transformation/: fanout_inverter_balancing.cpp  fo_inv_balancing.cpp
test/algorithms/physical_design/: ortho_new.cpp  ortho_ordering_network.cpp  ortho_sequential.cpp  ortho_sequential_network.cpp  orthogonal.cpp
test/io/: print_layout.cpp
test/networks/views/: input_sort_view.cpp  reverse_view.cpp  topo_view_input_sort.cpp
test/utils/blueprints/: EPFL_blueprints.hpp  ISCAS85_blueprints.hpp  fontes18_blueprints.hpp  majority_blueprints.hpp  network_blueprints.hpp  sequential_blueprints.hpp  trindade16_blueprints.hpp
